# jse

./: .gitignore  JSE.hs  Main.hs  Makefile  README  jse.cabal
JSE/: CLI.hs
JSE/Testing/: JSE.hs  Main.hs
